@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: July 26, 2008</p>
+      <p>Last Updated: July 29, 2008</p>
     </td>
   </tr>
 </table>
@@ -1027,6 +1027,9 @@ nuttx-0.3.12 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Add pipe() and test for both pipes and fifos
 	* Attempts to open a FIFO will now block until there is at least one writer
 	* Add test/Fixed errors in FIFO reader/writer interlocks
+	* Removed limitation: task_create() was only dup'ing 3 file descriptors (now
+	  dups all open file descriptors).
+	* Added a test for redirection of stdio through pipes
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
